fixed vertical scrollbar

--- a/webdesign/Post-MoneyLab_0105/lambdaCSS.css
+++ b/webdesign/Post-MoneyLab_0105/lambdaCSS.css
@@ -589,7 +589,7 @@ box-shadow: 10px 0px 31px -10px rgba(61,61,61,0.67); */
 
 /*******VERTICAL SCROLL BAR*******/
 		#menu_bar_scroll {	
-            display: none;
+            /*display: none;*/
     /*cursor: pointer;*/
     /*display: block-inline;*/
     background-color:#00EACE;/*
